2015-01-11  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (directory-files-recursively): Do not include
	superfluous remote file names.

2015-01-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww): Interpret anything that looks like a protocol
	designator as a full URL.

2015-01-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/shr.el (shr-urlify): Don't bother the user about
	invalidly-encoded display strings.

2015-01-10  Ivan Shmakov  <ivan@siamics.net>

	* net/shr.el (shr-urlify): Decode URLs before using them as titles
	(bug#19555).

2015-01-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/eww.el (eww): Always interpret URLs that start with https?:
	as plain URLs, even if they have spaces in them (bug#19556).
	(eww): Also interpret things like "en.wikipedia.org/wiki/Free
	software" as an URL.
	(eww): Don't interpret "org/foo" as an URL.
	(eww): Clear the title when loading so that we don't display
	misleading information.

2015-01-10  Daniel Colascione  <dancol@dancol.org>

	* vc/vc-hooks.el (vc-prefix-map): Bind vc-delete-file to C-x v x,
	by analogy with dired.

2015-01-09  Daniel Colascione  <dancol@dancol.org>

	* progmodes/js.el (js--function-heading-1-re)
	(js--function-prologue-beginning): Parse ES6 generator function
	declarations.  (That is, "function* name()").

2015-01-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eieio.el (defclass): Move from eieio-defclass all the code
	that creates functions, and most of the sanity checks.
	Mark as obsolete the <class>-child-p function.
	* emacs-lisp/eieio-core.el (eieio--define-field-accessors): Remove.
	(eieio--class, eieio--object): Use cl-defstruct.
	(eieio--object-num-slots): Define manually.
	(eieio-defclass-autoload): Use eieio--class-make.
	(eieio-defclass-internal): Rename from eieio-defclass.  Move all the
	`(lambda...) definitions and most of the sanity checks to `defclass'.
	Mark as obsolete the <class>-list-p function, the <class> variable and