@@ -1,3 +1,9 @@
+2015-01-13  Artur Malabarba  <bruce.connor.am@gmail.com>
+
+	* emacs-lisp/package.el (package--read-pkg-desc): New
+	function. Read a `define-package' form in current buffer. Return
+	the pkg-desc, with desc-kind set to KIND.
+
 2015-01-11  Michael Albinus  <michael.albinus@gmx.de>
 
 	* files.el (directory-files-recursively): Do not include
